--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,18 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "noEmit": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["src/*"],
+      "@api/*": ["src/api/*"],
+      "screens/*": ["src/screens/*"],
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+    },
+    "esModuleInterop": true,
+    "checkJs": true,
+    "typeRoots": ["./src/types"],
+  }
 }
