wip add list of pokemons

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 API_URL=https://pokeapi.co/api/v2
-SPIRTES_URL=https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/
+SPRITES_URL=https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back
